--- a/style/app.scss
+++ b/style/app.scss
@@ -17,6 +17,8 @@ main {
 }
 
 .table {
+  border: 1px solid #ddd;
+  padding: 15px;
 
   &__head {
     font-weight: bold;
@@ -24,7 +26,7 @@ main {
     &__row {
 
       &__item {
-        padding-bottom: 10px;
+        padding: 10px;
         border-bottom: 3px solid #ddd;
       }
     }
